--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
       <h1>PHOTO TRACKER</h1>
     </header>
     <form>
-      <input type="text" placeholder="title">
-      <input type="text" placeholder="photo source url">
+      <input class="title" type="text" placeholder="title">
+      <input  class="url" type="text" placeholder="photo source url">
       <button class='add_photos'>ADD ALBUM</button>
     </form>
     <section class="show_photos"></section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="./jquery.min.js"><\/script>')</script>
-    <script type="text/javascript" src="./scripts.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
   </body>
   </body>
 </html>
