Adjust form submit

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,9 @@
       <form>
         <input class="title" type="text" placeholder="title">
         <input  class="url" type="text" placeholder="photo source url">
-        <button class='add_photos'>ADD ALBUM!</button>
+        <button class='add_photos' disabled>ADD ALBUM!</button>
       </form>
     </header>
-    
     <section class="show_photos"></section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="./jquery.min.js"><\/script>')</script>
